tests/base/parser/bad/exps/exp_t-let-id-colon-tid-eq-string-in-with.scilexp
let a : Bool = True in (not a) (* not an expression '(not a)' *)
